@@ -79,7 +79,7 @@ public class Chapter extends Section {
     public Chapter(int number) {
         super(null, 1);
         numbers = new ArrayList<Integer>();
-        numbers.add(new Integer(number));
+        numbers.add(Integer.valueOf(number));
         triggerNewPage = true;
     }
 
@@ -93,7 +93,7 @@ public class Chapter extends Section {
     public Chapter(Paragraph title, int number) {
         super(title, 1);
         numbers = new ArrayList<Integer>();
-        numbers.add(new Integer(number));
+        numbers.add(Integer.valueOf(number));
         triggerNewPage = true;
     }
 
