@@ -290,7 +290,7 @@ public class SequenceList {
                             parse.low -= (parse.low & 1) == 1 ? 0 : 1;
                     }
                     for (int k = parse.low; k >= parse.high; k += inc)
-                        list.add(new Integer(k));
+                        list.add(Integer.valueOf(k));
                 }
                 else {
                     if (parse.odd || parse.even) {
@@ -301,7 +301,7 @@ public class SequenceList {
                             parse.low += (parse.low & 1) == 1 ? 1 : 0;
                     }
                     for (int k = parse.low; k <= parse.high; k += inc) {
-                        list.add(new Integer(k));
+                        list.add(Integer.valueOf(k));
                     }
                 }
             }
